--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Lysuns
+title: 哈密瓜
 subtitle: ''
 description: ''
 keywords:
-author: Lysuns
+author: 哈密瓜
 language: zh-Hans
 timezone: ''
 
