--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
+    "hexo-wordcount": "^6.0.1",
     "inferno": "^7.4.2",
     "inferno-create-element": "^7.4.2"
   }
